--- a/app.html
+++ b/app.html
@@ -6,8 +6,28 @@
 <body>
 {{APP}}
 </body>
+<style>
+    html,body{width:100%;overflow-x: hidden;}
+    html{-webkit-text-size-adjust:none;}
+</style>
 <script type="text/javascript">
+    run();
+    window.onresize=run
 
+    function run(){
+        let htmlWidth = window.innerWidth;
+        //得到html的Dom元素
+        let htmlDom = document.getElementsByTagName('html')[0];
+        //设置根元素字体大小
+
+        if(htmlWidth>992){
+            htmlDom.style.fontSize= '';
+        }else {
+            let num = htmlWidth/7.5 ;
+            num = num > 60 ? 60 : num;
+            htmlDom.style.fontSize= num+ 'px';
+        }
+    }
 
 </script>
 </html>
